--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.gridlayout.widget.GridLayout
-            android:id="@+id/gridMap"
+            android:id="@+id/gridLayoutMap"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.2"
@@ -25,27 +25,131 @@
             app:useDefaultMargins="false">
 
             <ImageView
-                android:id="@+id/imageView21"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 app:layout_column="0"
-                tools:srcCompat="@tools:sample/avatars" />
+                app:layout_row="0"
+                app:srcCompat="@drawable/Grass" />
 
             <ImageView
-                android:id="@+id/imageView22"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_column="0"
-                app:layout_row="1"
-                tools:srcCompat="@tools:sample/avatars" />
-
-            <ImageView
-                android:id="@+id/imageView23"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/imageView2"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:rotation="90"
                 app:layout_column="1"
                 app:layout_row="0"
-                tools:srcCompat="@tools:sample/avatars" />
+                app:srcCompat="@drawable/Road" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:rotation="90"
+                app:layout_column="1"
+                app:layout_row="1"
+                app:srcCompat="@drawable/Road" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:rotation="180"
+                app:layout_column="1"
+                app:layout_row="2"
+                app:srcCompat="@drawable/CornerRoad" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:layout_column="0"
+                app:layout_row="1"
+                app:srcCompat="@drawable/Grass" />
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:layout_column="0"
+                app:layout_row="2"
+                app:srcCompat="@drawable/Grass" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:layout_column="2"
+                app:layout_row="2"
+                app:srcCompat="@drawable/Road" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:layout_column="3"
+                app:layout_row="2"
+                app:srcCompat="@drawable/Road" />
+
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:layout_column="4"
+                app:layout_row="2"
+                app:srcCompat="@drawable/CornerRoad" />
+
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:rotation="90"
+                app:layout_column="4"
+                app:layout_row="3"
+                app:srcCompat="@drawable/Road" />
+
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:rotation="90"
+                app:layout_column="4"
+                app:layout_row="4"
+                app:srcCompat="@drawable/CornerRoad" />
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:layout_column="3"
+                app:layout_row="3"
+                app:srcCompat="@drawable/Grass" />
+
+            <ImageView
+                android:id="@+id/imageView13"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:layout_column="3"
+                app:layout_row="4"
+                app:srcCompat="@drawable/Road" />
+
+            <ImageView
+                android:id="@+id/imageView14"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:rotation="270"
+                app:layout_column="2"
+                app:layout_row="4"
+                app:srcCompat="@drawable/CornerRoad" />
+
+            <ImageView
+                android:id="@+id/imageView15"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:rotation="90"
+                app:layout_column="2"
+                app:layout_row="5"
+                app:srcCompat="@drawable/Road" />
         </androidx.gridlayout.widget.GridLayout>
 
         <LinearLayout
