--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,13 @@
             android:layout_height="match_parent"
             android:orientation="vertical" >
 
+            <ImageButton
+                android:id="@+id/buttonArcher"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="onClickButtonArcher"
+                android:src="@android:drawable/btn_star" />
+
             <Button
                 android:id="@+id/buttonStartWave"
                 android:layout_width="match_parent"
