Vue: Ajout d'une vue pour ajotuer les drawables (Tower et Enemies)
Renommage des variables membres: commence par m au lieu de _

Création des waves. Lancement de wave tester. Follow path

Thread de dessin: devra changer

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,17 +14,34 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.gridlayout.widget.GridLayout
-            android:id="@+id/gridLayoutMap"
-            android:layout_width="1935px"
-            android:layout_height="wrap_content"
-            android:onClick="onClickGridLayoutMap"
-            app:columnCount="8"
-            app:rowCount="12"
-            app:useDefaultMargins="false" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <androidx.gridlayout.widget.GridLayout
+                android:id="@+id/gridLayoutMap"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:onClick="onClickGridLayoutMap"
+                app:columnCount="8"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:rowCount="12"
+                app:useDefaultMargins="false" />
+
+            <FrameLayout
+                android:id="@+id/layoutBodies"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </FrameLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
             android:id="@+id/layoutCharacters"
@@ -38,15 +55,16 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="Archer"
                 android:onClick="onClickButtonArcher"
-                app:srcCompat="@drawable/ic_launcher_foreground" />
+                app:srcCompat="@drawable/archer" />
 
             <Button
                 android:id="@+id/buttonStartWave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="onClickButtonStartWave"
+                android:onClick="onClickStartWave"
                 android:text="Start Wave" />
         </LinearLayout>
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
