--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_weight="1"
+                    android:gravity="center_vertical"
                     android:text="TextView"
                     android:textSize="20sp" />
             </LinearLayout>
@@ -98,10 +99,29 @@
             <ImageButton
                 android:id="@+id/buttonArcher"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="50sp"
                 android:contentDescription="Archer"
                 android:onClick="onClickButtonArcher"
+                android:scaleType="fitCenter"
                 app:srcCompat="@drawable/archer" />
+
+            <ImageButton
+                android:id="@+id/buttonCannon"
+                android:layout_width="match_parent"
+                android:layout_height="50sp"
+                android:contentDescription="Cannon"
+                android:onClick="onClickButtonCannon"
+                android:scaleType="fitCenter"
+                android:src="@drawable/cannon" />
+
+            <ImageButton
+                android:id="@+id/buttonFlamethrower"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:contentDescription="Flamethrower"
+                android:onClick="onClickButtonFlamethrower"
+                android:scaleType="fitCenter"
+                android:src="@drawable/flame" />
 
             <Button
                 android:id="@+id/buttonStartWave"
