--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/container"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     tools:context=".MainActivity">
 
@@ -15,122 +16,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <androidx.gridlayout.widget.GridLayout
-                android:id="@+id/gridLayoutMap"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:onClick="onClickGridLayoutMap"
-                app:columnCount="8"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:rowCount="12"
-                app:useDefaultMargins="false" />
-
-            <FrameLayout
-                android:id="@+id/layoutBodies"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </FrameLayout>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <LinearLayout
-            android:id="@+id/layoutCharacters"
-            android:layout_width="400px"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/layoutHitPoints"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageViewHitPoints"
-                    android:layout_width="24dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/coeur" />
-
-                <TextView
-                    android:id="@+id/textViewHitPoints"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="TextView"
-                    android:textSize="20sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layoutMoney"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageViewMoney"
-                    android:layout_width="24dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/coin" />
-
-                <TextView
-                    android:id="@+id/textViewMoney"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="TextView"
-                    android:textSize="20sp" />
-            </LinearLayout>
-
-            <ImageButton
-                android:id="@+id/buttonArcher"
-                android:layout_width="match_parent"
-                android:layout_height="50sp"
-                android:contentDescription="Archer"
-                android:onClick="onClickButtonArcher"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/archer" />
-
-            <ImageButton
-                android:id="@+id/buttonCannon"
-                android:layout_width="match_parent"
-                android:layout_height="50sp"
-                android:contentDescription="Cannon"
-                android:onClick="onClickButtonCannon"
-                android:scaleType="fitCenter"
-                android:src="@drawable/cannon" />
-
-            <ImageButton
-                android:id="@+id/buttonFlamethrower"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:contentDescription="Flamethrower"
-                android:onClick="onClickButtonFlamethrower"
-                android:scaleType="fitCenter"
-                android:src="@drawable/flame" />
-
-            <Button
-                android:id="@+id/buttonStartWave"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:onClick="onClickStartWave"
-                android:text="Start Wave" />
-        </LinearLayout>
-
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
