--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -45,99 +45,215 @@
 
         <LinearLayout
             android:id="@+id/layoutCharacters"
-            android:layout_width="400px"
+            android:layout_width="450px"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="10px"
+            android:paddingTop="10px"
+            android:paddingRight="10px"
+            android:paddingBottom="10px">
 
             <LinearLayout
-                android:id="@+id/layoutHitPoints"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="10px">
 
-                <ImageView
-                    android:id="@+id/imageViewHitPoints"
-                    android:layout_width="50dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/coeur" />
-
-                <TextView
-                    android:id="@+id/textViewHitPoints"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="TextView"
-                    android:textSize="20sp" />
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageViewHitPoints"
+                        android:layout_width="25dp"
+                        android:layout_height="match_parent"
+                        app:srcCompat="@drawable/coeur" />
+
+                    <TextView
+                        android:id="@+id/textViewHitPoints"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="200"
+                        android:textAlignment="center"
+                        android:textSize="20sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageViewMoney"
+                        android:layout_width="25dp"
+                        android:layout_height="match_parent"
+                        app:srcCompat="@drawable/coin" />
+
+                    <TextView
+                        android:id="@+id/textViewMoney"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="0"
+                        android:textAlignment="center"
+                        android:textSize="20sp" />
+                </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/layoutMoney"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageViewMoney"
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/coin" />
-
-                <TextView
-                    android:id="@+id/textViewMoney"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="TextView"
-                    android:textSize="20sp" />
-            </LinearLayout>
-
-            <ImageButton
-                android:id="@+id/buttonArcher"
-                android:layout_width="match_parent"
-                android:layout_height="50sp"
-                android:contentDescription="Archer"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/archer" />
-
-            <ImageButton
-                android:id="@+id/buttonCannon"
-                android:layout_width="match_parent"
-                android:layout_height="50sp"
-                android:contentDescription="Cannon"
-                android:scaleType="fitCenter"
-                android:src="@drawable/cannon" />
-
-            <ImageButton
-                android:id="@+id/buttonFlamethrower"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:contentDescription="Flamethrower"
-                android:scaleType="fitCenter"
-                android:src="@drawable/flame" />
-
-            <TextView
-                android:id="@+id/textViewTowerCost"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:gravity="center_vertical"
-                android:text="TextView"
-                android:textSize="17sp"
-                android:visibility="invisible" />
-
-            <Button
-                android:id="@+id/buttonStartWave"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:text="Start Wave" />
-
-            <Button
-                android:id="@+id/buttonEnd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="End" />
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="150px"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/buttonArcher"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:contentDescription="Archer"
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/archer" />
+
+                    <ImageButton
+                        android:id="@+id/buttonCannon"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:contentDescription="Cannon"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/cannon" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="150px"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/buttonFlamethrower"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:contentDescription="Flamethrower"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/flame" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton5"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:src="@android:drawable/btn_star"
+                        android:visibility="invisible" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="10px">
+
+                <TextView
+                    android:id="@+id/textSelection"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="sans-serif-black"
+                    android:gravity="center_vertical"
+                    android:text="Sélection:"
+                    android:textSize="14sp"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/textLevel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-black"
+                    android:text="Level:"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/textCost"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-black"
+                    android:text="Cost:"
+                    android:textSize="14sp" />
+
+                <Button
+                    android:id="@+id/buttonUpgrade"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#732626"
+                    android:text="Upgrade" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="150px"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/buttonStart"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/start" />
+
+                    <ImageButton
+                        android:id="@+id/buttonPause"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/pause" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="150px"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/buttonFast"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/fast" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton4"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:src="@android:drawable/btn_star"
+                        android:visibility="invisible" />
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
