--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -23,7 +23,7 @@
         app:srcCompat="@drawable/background" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonStart"
+        android:id="@+id/buttonStartGame"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
