--- a/app/src/main/res/layout/activity_select.xml
+++ b/app/src/main/res/layout/activity_select.xml
@@ -140,7 +140,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="50px"
                 android:layout_marginTop="100px"
-                android:layout_marginEnd="50px"
+                android:layout_marginRight="50px"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
